test/libsolidity/syntaxTests/constantEvaluator/type_reference.sol
int[L] constant L = 6;
// ----
// TypeError 5462: (4-5='L'): Invalid array length, expected integer literal or constant expression.
// TypeError 9259: (0-21='int[L] constant L = 6'): Only constants of value type and byte array type are implemented.
